# aurora-github

./: LICENSE  README.md  lefthook.yml
.github/: process-release-notes.sh  updateReferences.sh  validate.yml
.github/test-actions/: test-detect-branch-version.yml
.github/workflows/: publish.yml  validate.yml  verify.yml
.lefthook/post-checkout/: update-action-references.elv
actions/check-action-references/: README.md  action.yml
actions/check-artifact-version/: README.md  action.yml
actions/check-project-license/: README.md  action.yml
actions/check-rust-versions/: README.md  action.yml
actions/check-subpath-exports/: README.md  action.yml
actions/detect-branch-version/: README.md  action.yml
core/: detect_branch_version.py  directories.py  exceptions.py  extract_rust_snippets.py  inputs.py  jvm.py  outputs.py  parse_npm_scope.py  processes.py
core/bash/: pdm.sh  (+2 more)
docs/: actions.drawio  schema.drawio
lib/: action-references.elv  branch-version.elv  console.elv  core.elv  critical-todos.elv  license-file.elv  npm.elv  project.elv  release-assets.elv  rust-snippets.elv  rust.elv  startup-libs.elv  subpath-exports.elv  wasm.elv
tests/python-lib/: .gitignore  README.md  pyproject.toml
tests/python-lib/src/python_lib/: __init__.py
tests/rust-wasm/: .gitignore  Cargo.toml
tests/rust-wasm/client-tests/: package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts  vitest.config.ts
tests/rust-wasm/client-tests/src/: lib.test.ts
tests/rust-wasm/src/: lib.rs
tests/rust-wasm/tests/: web.rs
validate-npm-package/: action.yml
website/: index.html
(+174 files in other folders)
