[project]
name = "python-lib"
version = "0.0.0"
description = "My sample Python library"
readme = "README.md"
authors = [{ name = "Gianluca Costa", email = "gianluca@gianlucacosta.info" }]
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pdm]
distribution = true

[tool.pdm.scripts]
verify = "echo '✅Simulating passing tests!'"
