[package]
name = "test-wasm"
version = "0.0.0"
publish = false
edition = "2021"
description = "Test web assembly in Rust"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.92"

[dev-dependencies]
tsify = { version = "0.4.5", features = ["json"] }
wasm-bindgen-test = "0.3.42"

[profile.release]
opt-level = "s"
lto = true
